update executon