@@ -9,12 +9,10 @@ import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.core.publisher.Sinks;
+import reactor.core.scheduler.Schedulers;
 
 import java.time.Instant;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Collectors;
 
@@ -34,21 +32,20 @@ public class WorkflowEngineImpl implements WorkflowEngine {
 
     @Override
     public Mono<String> run(MessageBatch startMessages, WorkflowDefinition wf) {
-
-        String runId = "test";
+        String runId = UUID.randomUUID().toString();
         FlowNode startNode = findStartNode(wf);
-
         ExecutionContext startCtx =
                 new ExecutionContext(startNode, startMessages, runId, 0);
         Flux.just(startCtx)
                 .expand(ctx -> executeNode(ctx, wf))
                 .doOnComplete(() ->
-                        log.info("✅ Workflow finished [runId={}]", runId))
+                        log.info("Workflow finished [runId={}]", runId))
+                .doOnError(error ->
+                        log.error("Workflow failed [runId={}]: {}", runId, error.getMessage()))
+                .subscribeOn(Schedulers.boundedElastic())
                 .subscribe();
-
         return Mono.just(runId);
     }
-
 
     @Override
     public Flux<ExecutionTrace> getTrace(String runId) {
@@ -69,23 +66,44 @@ public class WorkflowEngineImpl implements WorkflowEngine {
                 .filter(t -> t.getNodeId().equals(nodeId));
     }
 
-
-    private Flux<ExecutionContext> executeNode(
-            ExecutionContext ctx,
-            WorkflowDefinition wf
+    @Override
+    public Mono<String> runFromNode(
+            MessageBatch batch,
+            WorkflowDefinition wf,
+            String startNodeId
     ) {
+        String runId = UUID.randomUUID().toString();
+        FlowNode start = wf.getNodes().stream()
+                .filter(n -> n.getId().equals(startNodeId))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException(
+                        "Start node not found: " + startNodeId));
+        ExecutionContext ctx =
+                new ExecutionContext(start, batch, runId, 0);
+        Flux.just(ctx)
+                .expand(c -> executeNode(c, wf))
+                .doOnComplete(() ->
+                        log.info("Workflow finished from node [runId={}, nodeId={}]",
+                                runId, startNodeId))
+                .doOnError(error ->
+                        log.error("Workflow failed from node [runId={}, nodeId={}]: {}",
+                                runId, startNodeId, error.getMessage()))
+                .subscribeOn(Schedulers.boundedElastic())
+                .subscribe();
+
+        return Mono.just(runId);
+    }
+
+    private Flux<ExecutionContext> executeNode(ExecutionContext ctx, WorkflowDefinition wf) {
         FlowNode nodeDef = ctx.getNode();
         MessageBatch inputMessages = ctx.getMessages();
-
         Instant startedAt = Instant.now();
-
-        log.info("Executing node [{}:{}]",
-                nodeDef.getId(), nodeDef.getType());
+        log.info("Executing node [id={}, type={}]", nodeDef.getId(), nodeDef.getType());
         emitTrace(new ExecutionTrace(
                 ctx.getRunId(),
                 nodeDef.getId(),
                 nodeDef.getType(),
-                safeInput(inputMessages),
+                inputMessages,
                 null,
                 nodeDef.getConfig(),
                 "running",
@@ -93,18 +111,21 @@ public class WorkflowEngineImpl implements WorkflowEngine {
                 null,
                 null
         ));
-
         WorkflowNode node = registry.get(nodeDef.getType());
         if (node == null) {
-            return Flux.error(new IllegalStateException(
-                    "No WorkflowNode registered for type: " + nodeDef.getType()
-            ));
+            String errorMsg = "No WorkflowNode registered for type: " + nodeDef.getType();
+            log.error("Error {}", errorMsg);
+            return Flux.error(new IllegalStateException(errorMsg));
         }
 
         return Mono.fromCallable(() ->
                         node.execute(inputMessages, nodeDef.getConfig())
                 )
+                .subscribeOn(Schedulers.boundedElastic())
                 .doOnSuccess(result -> {
+                    log.info("Node completed [id={}, output={}]",
+                            nodeDef.getId(), result.getOutput());
+
                     emitTrace(new ExecutionTrace(
                             ctx.getRunId(),
                             nodeDef.getId(),
@@ -119,6 +140,9 @@ public class WorkflowEngineImpl implements WorkflowEngine {
                     ));
                 })
                 .doOnError(error -> {
+                    log.error("Node failed [id={}, type={}]: {}",
+                            nodeDef.getId(), nodeDef.getType(), error.getMessage());
+
                     emitTrace(new ExecutionTrace(
                             ctx.getRunId(),
                             nodeDef.getId(),
@@ -133,9 +157,15 @@ public class WorkflowEngineImpl implements WorkflowEngine {
                     ));
                 })
                 .flatMapMany(result -> {
-
                     List<FlowNode> nextNodes =
                             findNextNodes(wf, nodeDef.getId(), result.getOutput());
+
+                    if (nextNodes.isEmpty()) {
+                        log.info("No more nodes to execute [nodeId={}]", nodeDef.getId());
+                    } else {
+                        log.info("Moving to {} next node(s)", nextNodes.size());
+                    }
+
                     return Flux.fromIterable(nextNodes)
                             .map(next ->
                                     new ExecutionContext(
@@ -145,47 +175,73 @@ public class WorkflowEngineImpl implements WorkflowEngine {
                                             ctx.getAttempt()
                                     )
                             );
+                })
+                .onErrorResume(error -> {
+                    log.error("Stopping workflow due to error in node [id={}]",
+                            nodeDef.getId());
+                    return Flux.empty();
                 });
     }
 
     private void emitTrace(ExecutionTrace trace) {
         traces.add(trace);
-        traceSink.tryEmitNext(trace);
+        Sinks.EmitResult result = traceSink.tryEmitNext(trace);
+        if (result.isFailure()) {
+            log.warn("Failed to emit trace: {}", result);
+        }
     }
 
     private Map<String, Object> safeInput(MessageBatch batch) {
-        if (batch == null || batch.getItems().isEmpty()) {
+        if (batch == null || batch.getItems() == null || batch.getItems().isEmpty()) {
             return null;
         }
-        return batch.getItems().get(0).getData();
+
+        WorkflowMessage firstItem = batch.getItems().get(0);
+        return firstItem != null ? firstItem.getData() : null;
     }
 
-    private List<FlowNode> findNextNodes(
-            WorkflowDefinition wf,
-            String sourceId,
-            String output
-    ) {
+    private List<FlowNode> findNextNodes(WorkflowDefinition wf, String sourceId, String output) {
+        if (wf == null || wf.getEdges() == null || wf.getNodes() == null) {
+            log.warn("Invalid workflow definition");
+            return Collections.emptyList();
+        }
+
+        if (output == null) {
+            log.warn("Node output is null, cannot find next nodes [sourceId={}]", sourceId);
+            return Collections.emptyList();
+        }
+
         return wf.getEdges().stream()
-                .filter(e -> e.getSource().equals(sourceId))
-                .filter(e -> e.getSourceHandle().equals(output))
+                .filter(e -> e != null)
+                .filter(e -> sourceId.equals(e.getSource()))
+                .filter(e -> output.equals(e.getSourceHandle()))
                 .map(e -> wf.getNodes().stream()
-                        .filter(n -> n.getId().equals(e.getTarget()))
+                        .filter(n -> n != null)
+                        .filter(n -> e.getTarget().equals(n.getId()))
                         .findFirst()
                         .orElse(null))
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private FlowNode findStartNode(WorkflowDefinition wf) {
+        if (wf == null || wf.getNodes() == null || wf.getEdges() == null) {
+            throw new IllegalStateException("Invalid workflow definition");
+        }
 
+        if (wf.getNodes().isEmpty()) {
+            throw new IllegalStateException("Workflow has no nodes");
+        }
         Set<String> targets = wf.getEdges().stream()
+                .filter(e -> e != null)
                 .map(FlowEdge::getTarget)
+                .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
-
         return wf.getNodes().stream()
+                .filter(n -> n != null)
                 .filter(n -> !targets.contains(n.getId()))
                 .findFirst()
                 .orElseThrow(() ->
-                        new IllegalStateException("No start node found"));
+                        new IllegalStateException("No start node found (all nodes have incoming edges)"));
     }
 }
